src/app/display/display/display.component.scss
@keyframes pulsate {
  0% {
    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.1);
  }
  50% {
    box-shadow: 0px 0px 0px 20px rgba(255, 255, 255, 0.3);
  }
  100% {
    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.1);
  }
}

.display-container {
  position: fixed;
  width: 100vw;
  height: 100vw;
  background: #000000;
  color: #ffffff;

  .display-queues {
    display: flex;
    justify-content: space-between;
  
    .display-queue {
      flex: 1 1 0;
      padding: 10px;
      padding-top: 100px;
      margin-right: 10px;
      background-size: 100%;
      background-repeat: no-repeat;
      height: 100vh;

      ul {
        list-style: none;
        margin: 0px;
        padding: 0px;

        li {
          padding: 10px;
          font-size: 20px;

          &:nth-child(odd) {
            background: rgba(255, 255, 255, 0.2);
          }

          h2 {
            font-weight: normal;
            margin: 0px;
            font-size: 30px;
          }
        }
      }
    }
  }

  .display-overflow-mask {
    position: fixed;
    left: 0px;
    bottom: 0px;
    width: 100vw;
    height: 100px;
    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(0,0,0,1) 100%);
  }

  .display-properties {
    position: fixed;
    left: 20px;
    bottom: 0px;
    width: 50%;
    background: #ffffff;
    color: #000000;
    padding: 10px;
    transform: translateY(100%);
    transition: transform 0.1s ease-out;

    &.shown {
      transform: translateY(0%);
    }

    .display-properties-toggle {
      position: absolute;
      left: 0px;
      top: -30px;
      width: 50px;
      height: 30px;
      color: #ffffff;
      cursor: pointer;
      font-size: 20px;
    }
    
    .display-shown-queues {
      padding: 10px;
      border: 1px solid #333333;
      margin-top: 10px;
      user-select: none;
    
      .queue-order-block {
        padding: 5px 10px;
        box-sizing: border-box;
        height: 30px;
        margin-right: 10px;
        border-radius: 10px;
        background: #333333;
        color: #ffffff;
        display: inline-block;
        cursor: default;
        position: relative;
    
        &:hover {
          background: #444444;
        }
      }
    }
  }
}

.display-alert {
  position: fixed;
  width: 50vw;
  left: 25vw;
  top: 35vh;
  background: rgba(255, 255, 255, 0.75);
  color: #000000;
  padding: 20px;
  font-size: 30px;
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  border-radius: 10px;

  animation: pulsate 2s linear infinite;

  h1 {
    font-size: 30px;
    text-align: center;
  }
  .display-alert-content {
    white-space: pre;
    font-size: 40px;
  }
}

